--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+
+.signup-box{
+  border: 1px solid #ddd;
+  width: 700px;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 5px;
+}
+.title{
+  font-weight: 600;
+  margin-top:0;
+}
+.err {
+  font-size: small;
+  color: red;
+}
+.asterisk{
+  font-size: small;
+  color: red;
+}
