--- a/client/src/components/Styling/css/mainutil.css
+++ b/client/src/components/Styling/css/mainutil.css
@@ -346,6 +346,18 @@ iframe {
   padding-top: 20px;
 }
 
+.container-login100-form-btn2 {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  
+  padding-top: 20px;
+}
+
 .login100-form-btn {
   font-family: Montserrat-Bold;
   font-size: 15px;
