--- a/client/src/components/Styling/css/mainutil.css
+++ b/client/src/components/Styling/css/mainutil.css
@@ -208,7 +208,9 @@ iframe {
 .login100-pic img {
   max-width: 100%;
 }
-
+.container2{
+  background-image: url(./images/blue-pink-gradient-linear-1920x1080-c2-ff69b4-87ceeb-a-15-f-14.svg);
+}
 
 /*------------------------------------------------------------------
 [  ]*/
@@ -384,6 +386,31 @@ iframe {
   transition: all 0.4s;
 }
 
+.login100-form-btn2 {
+  font-family: Montserrat-Bold;
+  font-size: 15px;
+  line-height: 1.5;
+  color: #fff;
+  text-transform: uppercase;
+
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  background: #57b846;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: right;
+  
+  padding: 0 25px;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
 .login100-form-btn:hover {
   background: #333333;
 }
