--- a/client/src/components/TeacherDashboard/Chatbox/Chatbox.css
+++ b/client/src/components/TeacherDashboard/Chatbox/Chatbox.css
@@ -1,12 +1,21 @@
 .container2 {
     max-width: 1170px;
     margin: auto;
+    padding: 10px;
 }
 
 img {
     max-width: 100%;
 }
-
+h3 {
+    margin: 10px;
+    color: #360f64;
+}
+h4 {
+    color: #360f64;
+    font-size: 20px;
+    margin: auto;
+}
 .inbox_people {
     background: #f8f8f8 none repeat scroll 0 0;
     float: left;
@@ -28,14 +37,15 @@ img {
 
 .recent_heading {
     float: left;
-    width: 40%;
+    width: 100%;
 }
+
 
 .srch_bar {
     display: inline-block;
     text-align: right;
-    width: 60%;
-    padding:
+    width: auto;
+    padding:0px;
 }
 
 .headind_srch {
@@ -56,20 +66,33 @@ img {
     width: 80%;
     padding: 2px 0 4px 6px;
     background: none;
+    margin-bottom:0px;
 }
 
 .srch_bar .input-group-addon button {
     background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
     border: medium none;
-    padding: 0;
-    color: #707070;
+    
+    color: #574966;
     font-size: 18px;
+
 }
 
 .srch_bar .input-group-addon {
     margin: 0 0 0 -27px;
+    display: flex;
+  flex-flow: row wrap;
 }
-
+@media (max-width: 800px) {
+    .input-group-addon input {
+      margin: 10px 0;
+  }  
+  .input-group-addon {
+    flex-direction: column;
+    align-items: stretch;
+  }
+}
+  
 .chat_ib h5 {
     font-size: 15px;
     color: #464646;
@@ -158,7 +181,7 @@ img {
 }
 
 .sent_msg p {
-    background: #05728f none repeat scroll 0 0;
+    background: #594f8d none repeat scroll 0 0;
     border-radius: 3px;
     font-size: 14px;
     margin: 0;
@@ -192,7 +215,7 @@ img {
 }
 
 .msg_send_btn {
-    background: #05728f none repeat scroll 0 0;
+    background: #360f64 none repeat scroll 0 0;
     border: medium none;
     border-radius: 50%;
     color: #fff;
@@ -212,4 +235,5 @@ img {
 .msg_history {
     height: 516px;
     overflow-y: auto;
+    padding:10px;
 }
