--- a/client/src/components/TeacherDashboard/Calender/Calender.css
+++ b/client/src/components/TeacherDashboard/Calender/Calender.css
@@ -35,6 +35,7 @@ main {
 h3 {
     margin: 20px;
     color: #360f64;
+    margin-top:20px;
 }
 
 .copyright {
@@ -170,9 +171,11 @@ sidebar {
     box-shadow: 5px 0px 20px rgba(0, 0, 0, 0.2);
 }
 
-main {
+/* main {
     background-color: #FCFBFC;
-}
+    margin-left: 250px;
+    margin-right: 40px;
+} */
 
 .avatar__name {
     font-size: 0.8rem;
@@ -226,6 +229,9 @@ main {
 .calendar {
     background-color: white;
     border: 1px solid #e1e1e1;
+    margin-left: 50px;
+    margin-right: 40px;
+    width:90%;
 }
 
 .calendar__header>div {
