--- a/client/src/components/TeacherDashboard/table.css
+++ b/client/src/components/TeacherDashboard/table.css
@@ -50,7 +50,11 @@ li {
     margin: 0px;
     list-style-type: none;
 }
-
+h3 {
+    margin: 20px;
+    color: #360f64;
+    margin-top:20px;
+}
 
 /* ------------------------------------ */
 input {
@@ -210,6 +214,10 @@ td {
 .table100 {
     position: relative;
     padding-top: 60px;
+    margin-left: 50px;
+    margin-top: 20px;
+    margin-right: 100px;
+    width:90%;
 }
 
 .table100-head {
