--- a/client/src/components/TeacherProfile/table.css
+++ b/client/src/components/TeacherProfile/table.css
@@ -12,7 +12,26 @@
     box-sizing: border-box;
 }
 
+.newbutton2 {
+    border: none;
+    border-radius: 0.1cm;
+    outline: 0;
+    display: inline-block;
+    padding: 10px;
+    color: white;
+    background-color: #360f64;
+    text-align: center;
+    cursor: pointer;
+    width: 90%;
+    transition: 0.3s;
+    margin: 10px;
+    align-items: left;
 
+}
+
+.newbutton2:hover {
+    background-color: purple;
+}
 
 /* ------------------------------------ */
 a {
@@ -229,7 +248,7 @@ td {
     color: #fff;
     line-height: 1.4;
 
-    background-color: #594f8d;
+    background-color: #360f64;
 }
 
 .table100.ver1 td {
