--- a/client/src/components/TeacherProfile/Styling/main.css
+++ b/client/src/components/TeacherProfile/Styling/main.css
@@ -82,7 +82,25 @@
    margin: 0 auto;
    border-radius: 50%;
  }
-
+ .newbutton3 {
+  border: none;
+  border-radius: 0.1cm;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color:#940707;
+  text-align: center;
+  cursor: pointer;
+  width: 90%;
+  transition: 0.3s;
+  margin: 10px;
+  cursor: default;
+}
+.disabledCursor {
+  cursor: default;
+  pointer-events: none;
+}
  .carousel .img-box img {
    width: 100%;
    height: 100%;
@@ -5165,7 +5183,20 @@
  .newbutton:hover {
    background-color: purple;
  }
-
+ .newbutton4 {
+  border: none;
+  border-radius: 0.1cm;
+  outline: 0;
+  display: inline-block;
+  padding: 15px;
+  color: white;
+  background-color: purple;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  transition: 0.3s;
+  margin: 10px;
+}
  .cc-profile-image a {
    position: relative;
  }
