--- a/client/src/components/TeacherProfile/Styling/main.css
+++ b/client/src/components/TeacherProfile/Styling/main.css
@@ -5176,9 +5176,22 @@
   margin: 10px;
  
 }
-
+.newbutton4 {
+  border: none;
+  border-radius: 0.1cm;
+  outline: 0;
+  display: inline-block;
+  padding: 15px;
+  color: white;
+  background-color: purple;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  transition: 0.3s;
+  margin: 10px;
+}
  .disabledCursor {
-   
+   cursor: default;
    
    pointer-events: none;
  }
