VideoChat,Other APIS

--- a/client/src/components/TeacherProfile/Styling/main.css
+++ b/client/src/components/TeacherProfile/Styling/main.css
@@ -5161,6 +5161,21 @@
    transition: 0.3s;
    margin: 10px;
  }
+
+ .newbuttonx {
+   border: none;
+   border-radius: 0.1cm;
+   outline: 0;
+   display: inline-block;
+   padding: 8px;
+   color: white;
+   background-color: #360f64;
+   text-align: center;
+   cursor: pointer;
+   width: 100%;
+   transition: 0.3s;
+   margin: 10px;
+ }
 .newbutton3 {
   border: none;
   border-radius: 0.1cm;
