--- a/client/src/components/UserDashboard/table.css
+++ b/client/src/components/UserDashboard/table.css
@@ -12,6 +12,38 @@
     box-sizing: border-box;
 }
 
+.newbutton2 {
+    border: none;
+    border-radius: 0.1cm;
+    outline: 0;
+    display: inline-block;
+    padding: 10px;
+    color: white;
+    background-color: #940707;
+    text-align: center;
+    cursor: pointer;
+    width: 90%;
+    transition: 0.3s;
+    margin-top:-2px;
+    align-items: left;
+
+}
+.newbuttonx {
+    border: none;
+    border-radius: 0.1cm;
+    outline: 0;
+    display: inline-block;
+    padding: 10px;
+    color: white;
+    background-color: #360f64;
+    text-align: center;
+    cursor: pointer;
+    width: 90%;
+    transition: 0.3s;
+    margin-top: -8px;
+    align-items: left;
+
+}
 
 
 /* ------------------------------------ */
@@ -175,7 +207,7 @@ td {
 }
 
 .column2 {
-    width: 20%;
+    width: 13%;
 }
 
 .column3 {
@@ -183,21 +215,17 @@ td {
 }
 
 .column4 {
-    width: 15%;
+    width: 13%;
 }
 
 .column5 {
-    width: 25%;
+    width: 10%;
 }
 .column6 {
     width: 13%;
 }
 .column7 {
     width: 13%;
-}
-.column8 {
-    width: 13%;
-    padding: 37px;
 }
 .table100-head th {
     padding-top: 18px;
@@ -214,7 +242,6 @@ td {
 .table100 {
     position: relative;
     padding-top: 60px;
-    
 }
 
 .table100-head {
