--- a/client/src/components/Styling/styles/main_styles.css
+++ b/client/src/components/Styling/styles/main_styles.css
@@ -349,7 +349,7 @@ section {
 }
 
 .section_title {
-	padding-top: 14px;
+	padding-top: 50px;
 }
 
 .section_title h1 {
@@ -939,8 +939,8 @@ section {
 *********************************/
 
 .locations {
-	background: #FFFFFF;
-	padding-top: 95px;
+	margin-top: 100px;
+	padding-top:120px;
 	z-index: 1;
 }
 
