--- a/client/src/components/VideoChat/style.css
+++ b/client/src/components/VideoChat/style.css
@@ -7,26 +7,26 @@
     
      
  }
-/*********************************
-3. Header
-*********************************/
-.headervideobox{width:95%}
+ 
+ 
 .videobox {
     margin-top: 2px;
-    margin-left: -10px;
-    height: 622px;
+    padding:0px;
+    height: 630px;
     color:white;
     border-radius: 0.1rem;
-    z-index: -10;
+    
+  
      
 
  }
  .headerfixed{
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
+     
+    background-color:rgba(54, 15, 100, 0.9);
+   
     width: 100%;
+    height:80px;
+    margin-bottom: 10px;
 
  }
  .videobox2 {
@@ -76,65 +76,13 @@
 .newbutton4:hover{
      background-color: purple;
 }
-.headernewoverlay{
-    width: 100%;
-   background: rgba(54, 15, 100, 0.9);
-    
-}
-.headervideo {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    
-   
-    background: rgba(54, 15, 100, 0.9);
-    padding:10px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.headervideo_overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.85);
-    
-    visibility: hidden;
-    opacity: 0;
-    -webkit-transition: all 400ms ease;
-    -moz-transition: all 400ms ease;
-    -ms-transition: all 400ms ease;
-    -o-transition: all 400ms ease;
-    transition: all 400ms ease;
-}
-
-.headervideo.active .header_overlay {
-    visibility: visible;
-    opacity: 1;
-}
-
-.header_content {
-    width: 100%;
-    height: 128px;
-    padding-left: 50px;
-    padding-right: 50px;
-    -webkit-transition: all 400ms ease;
-    -moz-transition: all 400ms ease;
-    -ms-transition: all 400ms ease;
-    -o-transition: all 400ms ease;
-    transition: all 400ms ease;
-}
-
-.header.scrolled .header_content {
-    height: 90px;
-}
+ 
+ 
 .siteuserbox{
-    height: inherit;
+    height: 99%;
     position:relative;
     background: blue;
+    width: 100%;
 
 }
 .remoteuserbox{
@@ -145,5 +93,6 @@
     height:200px;
     width: 200px;
     margin-left: 90%;
+    margin-bottom:10px;
     z-index: 100;
 }
