--- a/client/src/components/TeacherDashboard/table.css
+++ b/client/src/components/TeacherDashboard/table.css
@@ -75,7 +75,38 @@ button {
     border: none;
     background: transparent;
 }
+.newbutton2 {
+    border: none;
+    border-radius: 0.1cm;
+    outline: 0;
+    display: inline-block;
+    padding: 10px;
+    color: white;
+    background-color: #940707;
+    text-align: center;
+    cursor: pointer;
+    width: 90%;
+    transition: 0.3s;
+    margin-top:-2px;
+    align-items: left;
 
+}
+.newbuttonx {
+    border: none;
+    border-radius: 0.1cm;
+    outline: 0;
+    display: inline-block;
+    padding: 10px;
+    color: white;
+    background-color: #360f64;
+    text-align: center;
+    cursor: pointer;
+    width: 90%;
+    transition: 0.3s;
+    margin-top: -8px;
+    align-items: left;
+
+}
 button:hover {
     cursor: pointer;
 }
