--- a/client/src/components/Styling/css/mainutil.css
+++ b/client/src/components/Styling/css/mainutil.css
@@ -190,6 +190,14 @@ iframe {
   justify-content: space-between;
   padding: 177px 130px 33px 95px;
 }
+.signup-box {
+  font-family: Poppins-Regular;
+  border: 1px solid #ddd;
+  width: 700px;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 5px;
+}
 
 /*------------------------------------------------------------------
 [  ]*/
@@ -200,12 +208,14 @@ iframe {
 .login100-pic img {
   max-width: 100%;
 }
-
+.container2{
+  background-image: url(./images/blue-pink-gradient-linear-1920x1080-c2-ff69b4-87ceeb-a-15-f-14.svg);
+}
 
 /*------------------------------------------------------------------
 [  ]*/
 .login100-form {
-  width: 290px;
+  width: 700px;
 }
 
 .login100-form-title {
@@ -242,7 +252,23 @@ iframe {
   border-radius: 25px;
   padding: 0 30px 0 68px;
 }
-
+ label {
+  font-family: Poppins-Medium;
+  font-size: 50px;
+  margin-left: 25px;
+  line-height: 1.5;
+  font: black;
+}
+ .radio100 {
+  font-family: Poppins-Medium;
+  font-size: 25px;
+  opacity: 0;
+  z-index: 1;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+} 
 
 /*------------------------------------------------------------------
 [ Focus ]*/
@@ -322,6 +348,18 @@ iframe {
   padding-top: 20px;
 }
 
+.container-login100-form-btn2 {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  
+  padding-top: 20px;
+}
+
 .login100-form-btn {
   font-family: Montserrat-Bold;
   font-size: 15px;
@@ -348,6 +386,31 @@ iframe {
   transition: all 0.4s;
 }
 
+.login100-form-btn2 {
+  font-family: Montserrat-Bold;
+  font-size: 15px;
+  line-height: 1.5;
+  color: #fff;
+  text-transform: uppercase;
+
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  background: #57b846;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: right;
+  
+  padding: 0 25px;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
 .login100-form-btn:hover {
   background: #333333;
 }
