--- a/client/src/components/Styling/styles/listings.css
+++ b/client/src/components/Styling/styles/listings.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-/****
+/**********
 
 [Table of Contents]
 
@@ -13,17 +13,17 @@
 6. Footer
 
 
-****/
+**********/
 
-/***
+/*****
 1. Fonts
-***/
+*****/
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900');
 
-/*****
+/***********
 2. Body and some general stuff
-*****/
+***********/
 
 * {
 	margin: 0;
@@ -169,7 +169,7 @@ h6::selection {}
 
 img {
 	max-width: 100%;
-
+	
 }
 
 button:active {
@@ -406,9 +406,9 @@ section {
 	background: #FFFFFF;
 }
 
-/*****
+/***********
 3. Header
-*****/
+***********/
 
 .header {
 	position: fixed;
@@ -579,9 +579,9 @@ section {
 	color: #ffb400;
 }
 
-/*****
+/***********
 4. Menu
-*****/
+***********/
 
 .menu {
 	position: fixed;
@@ -648,82 +648,86 @@ section {
 	font-weight: 500;
 	color: #ffb400;
 }
-
+  
 /* dropdown menu    */
 
 
-
-/the container must be positioned relative:/ .autocomplete {
+  
+  /*the container must be positioned relative:*/
+  .autocomplete {
 	position: relative;
 	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	cursor: pointer;
-
-}
-
-input {
+		font-size: 16px;
+		margin: 4px 2px;
+		cursor: pointer;
+		
+  }
+  
+  input {
 	border: 1px solid transparent;
 	background-color: #f1f1f1;
 	padding: 10px;
 	font-size: 16px;
-}
-
-input[type=text] {
+  }
+  
+  input[type=text] {
 	background-color: #f1f1f1;
 	width: 100%;
-}
-
-input[type=submit] {
+  }
+  
+  input[type=submit] {
 	background-color: purple;
-
-	border: none;
-	color: white;
-	padding: 15px 32px;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	cursor: pointer;
-	width: 150px;
-	height: 47px;
-	border-radius: 5px;
-}
-
-.autocomplete-items {
+	
+		border: none;
+		color: white;
+		padding: 15px 32px;
+		text-decoration: none;
+	   display: inline-block;
+		font-size: 16px;
+		margin: 4px 2px;
+		cursor: pointer;
+		width:150px;
+		height: 47px;
+		border-radius: 5px;
+  }
+  
+  .autocomplete-items {
 	position: absolute;
 	border: 1px solid #d4d4d4;
 	border-bottom: none;
 	border-top: none;
 	z-index: 99;
-	/position the autocomplete items to be the same width as the container: / top: 100%;
+	/*position the autocomplete items to be the same width as the container:*/
+	top: 100%;
 	left: 0;
 	right: 0;
-}
-
-.autocomplete-items div {
+  }
+  
+  .autocomplete-items div {
 	padding: 10px;
 	cursor: pointer;
-	background-color: #fff;
-	border-bottom: 1px solid #d4d4d4;
-}
+	background-color: #fff; 
+	border-bottom: 1px solid #d4d4d4; 
+  }
+  
+  /*when hovering an item:*/
+  .autocomplete-items div:hover {
+	background-color: #e9e9e9; 
+  }
+  
+  /*when navigating through the items using the arrow keys:*/
+  .autocomplete-active {
+	background-color: purple !important; 
+	color: #ffffff; 
+  }
 
-/when hovering an item:/ .autocomplete-items div:hover {
-	background-color: #e9e9e9;
-}
+  /*  slider  */
 
-/when navigating through the items using the arrow keys:/ .autocomplete-active {
-	background-color: purple !important;
-	color: #ffffff;
-}
-
-/*  slider  */
-
-.slidecontainer {
+  .slidecontainer {
 	width: 100%;
-}
-
-.slider {
+  }
+  
+  .slider {
 	-webkit-appearance: none;
 	width: 100%;
 	height: 3px;
@@ -733,13 +737,13 @@ input[type=submit] {
 	opacity: 0.7;
 	-webkit-transition: .2s;
 	transition: opacity .2s;
-}
-
-.slider:hover {
+  }
+  
+  .slider:hover {
 	opacity: 1;
-}
-
-.slider::-webkit-slider-thumb {
+  }
+  
+  .slider::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	appearance: none;
 	width: 15px;
@@ -747,79 +751,72 @@ input[type=submit] {
 	border-radius: 30%;
 	background: purple;
 	cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
+  }
+  
+  .slider::-moz-range-thumb {
 	width: 15px;
 	height: 15px;
 	border-radius: 30%;
 	background: purple;
 	cursor: pointer;
-}
-
+  }
 /* dropdown menu    */
-.btn {
-
-	background-color: purple;
-	border: none;
-	color: white;
-	padding: 15px 32px;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	cursor: pointer;
-	width: 250px;
-
-}
-
-.bootstrap-select .btn {
-	background-color: purple;
+.btn  {
+	
+		background-color: purple;
+		border: none;
+		color: white;
+		padding: 15px 32px;
+		text-decoration: none;
+	   display: inline-block;
+		font-size: 16px;
+		margin: 4px 2px;
+		cursor: pointer;
+		width:250px;
+	  
+  }
+  .bootstrap-select .btn {
+	background-color:purple;
 	font-size: 16px;
 	color: white;
 	border: none;
 	display: inline-block;
 	padding: 12px 12px;
 	margin: 4px 2px;
-	margin-left: -10px;
-	cursor: pointer;
-	width: 250px;
-	text-align: center
-}
-
+	margin-left:-10px;
+		cursor: pointer;
+		width:250px;
+		text-align: center
+  }
 .dropdown {
 	position: relative;
 	display: inline-block;
-}
+  }
 
-.dropdown-menu {
+  .dropdown-menu {
 	display: none;
 	position: absolute;
 	background-color: #f1f1f1;
 	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
-}
+  }
 
-.dropdown-content a {
+  .dropdown-content a {
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
-}
+  }
 
-.dropdown-content a:hover {
-	background-color: #ddd;
-}
+  .dropdown-content a:hover {background-color: #ddd;}
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-	display: block;
-}
+.dropdown:hover .dropdown-content {display: block;}
 
-/*****
+/***********
 5. Listings
-*****/
+***********/
 
 .listings {
 	background: #FFFFFF;
@@ -1127,9 +1124,9 @@ input[type=submit] {
 	height: calc(100% + 30px);
 }
 
-/*****
+/***********
 6. Footer
-*****/
+***********/
 
 .footer {
 	background: #FFFFFF;
