--- a/client/src/components/TeacherDashboard/DashboardMain.css
+++ b/client/src/components/TeacherDashboard/DashboardMain.css
@@ -30,7 +30,39 @@
      text-align: center;
      margin-bottom: 30px;
  }
+ .cancelbutton {
+    border: none;
+    border-radius: 0.1cm;
+    outline: 0;
+    display: inline-block;
+    padding: 10px;
+    color: white;
+    background-color: #940707;
+    text-align: center;
+    width: 100%;
+    transition: 0.3s;
+    margin-top: -22px;
+    margin-bottom: 10px;
+    align-items: left;
 
+}
+
+.cancelled {
+    border: none;
+    border-radius: 0.1cm;
+    outline: 0;
+    display: inline-block;
+    padding: 10px;
+    color: white;
+    background-color: #940707;
+    text-align: center;
+    width: 100%;
+    transition: 0.3s;
+    margin-top: -22px;
+    margin-bottom: 10px;
+    align-items: left;
+
+}
  .wrapper .sidebar ul li {
      padding: 15px;
      border-bottom: 1px solid #bdb8d7;
