--- a/client/src/components/CheckoutPage/Sucess.css
+++ b/client/src/components/CheckoutPage/Sucess.css
@@ -2,7 +2,7 @@
     color: #636363;
     width: 100%;
 }
- 
+
 .modal-confirm .modal-content {
     padding: 20px;
     border-radius: 5px;
@@ -40,7 +40,7 @@
 }
 
 .modal-confirm .icon-box {
-    color: #360f64;
+    color: #fff;
     position: absolute;
     margin: 0 auto;
     left: 0;
@@ -50,7 +50,7 @@
     height: 95px;
     border-radius: 50%;
     z-index: 9;
-    background: #fff;
+    background: #360f64;
     padding: 15px;
     text-align: center;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
